[gd_scene load_steps=54 format=2]

[ext_resource path="res://characters/enemies/special_bosses/minotaur/Scripts/Minotaur.gd" type="Script" id=1]
[ext_resource path="res://characters/enemies/special_bosses/minotaur/Assets/Minotaur-Sheet.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/special_bosses/minotaur/Assets/BarV8_Bar.png" type="Texture" id=3]
[ext_resource path="res://characters/enemies/special_bosses/minotaur/Assets/BarV8_ProgressBar.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.25, 27 )

[sub_resource type="Animation" id=2]
resource_name = "Attack_ground"
length = 2.0
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 50, 51, 52, 53, 54, 55, 56, 57, 58 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.92 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("area2d_attack_ground/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.32, 1.64 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "Attack_melee"
length = 1.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46, 47, 48 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area2d_attack_melee/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.15, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.55 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "Dead"
length = 4.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 70, 71, 72, 73, 74, 75, 76, 77 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=41]
resource_name = "Hit"
length = 0.5
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.01, 0.11, 0.21, 0.31 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 60, 61, 62, 63 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.44 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_moving"
}, {
"args": [  ],
"method": "start_moving"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 40 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("area2d_attack_melee/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23, 24, 25, 26, 27 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Attack_ground"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Attack_melee"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Dead"

[sub_resource type="AnimationNodeAnimation" id=42]
animation = "Hit"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=47]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachine" id=10]
states/Attack_ground/node = SubResource( 12 )
states/Attack_ground/position = Vector2( 3, -1 )
states/Attack_melee/node = SubResource( 13 )
states/Attack_melee/position = Vector2( 965, -1 )
states/Dead/node = SubResource( 14 )
states/Dead/position = Vector2( 448, -327 )
states/Hit/node = SubResource( 42 )
states/Hit/position = Vector2( 24, 332 )
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 448, 116 )
states/Run/node = SubResource( 15 )
states/Run/position = Vector2( 448, -1 )
states/Walk/node = SubResource( 16 )
states/Walk/position = Vector2( 448, -153 )
transitions = [ "Idle", "Attack_melee", SubResource( 17 ), "Attack_melee", "Idle", SubResource( 18 ), "Run", "Idle", SubResource( 19 ), "Idle", "Run", SubResource( 20 ), "Run", "Attack_melee", SubResource( 21 ), "Attack_melee", "Run", SubResource( 22 ), "Walk", "Run", SubResource( 23 ), "Run", "Walk", SubResource( 24 ), "Walk", "Attack_melee", SubResource( 25 ), "Attack_melee", "Walk", SubResource( 26 ), "Attack_ground", "Walk", SubResource( 27 ), "Walk", "Attack_ground", SubResource( 28 ), "Attack_ground", "Run", SubResource( 29 ), "Run", "Attack_ground", SubResource( 30 ), "Attack_ground", "Idle", SubResource( 31 ), "Idle", "Attack_ground", SubResource( 32 ), "Walk", "Idle", SubResource( 33 ), "Idle", "Walk", SubResource( 34 ), "Attack_ground", "Dead", SubResource( 35 ), "Walk", "Dead", SubResource( 36 ), "Run", "Dead", SubResource( 37 ), "Idle", "Dead", SubResource( 38 ), "Attack_melee", "Dead", SubResource( 39 ), "Walk", "Hit", SubResource( 43 ), "Hit", "Walk", SubResource( 44 ), "Run", "Hit", SubResource( 45 ), "Hit", "Run", SubResource( 46 ), "Hit", "Idle", SubResource( 47 ), "Idle", "Hit", SubResource( 48 ) ]
start_node = "Idle"
end_node = "Dead"
graph_offset = Vector2( -70, -205 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=11]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 22, 31.25 )

[sub_resource type="RectangleShape2D" id=49]
extents = Vector2( 51, 8.5 )

[node name="Minotaur" type="KinematicBody2D" groups=["Boss", "Enemy"]]
scale = Vector2( 3, 3 )
collision_layer = 8
collision_mask = 81
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10
vframes = 8
frame = 40

[node name="Health_bar" type="TextureProgress" parent="."]
margin_left = -41.0
margin_top = -35.0
margin_right = 233.0
margin_bottom = -10.0
rect_scale = Vector2( 0.3, 0.3 )
max_value = 2000.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 2, 2 )
tint_under = Color( 1, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack_ground = SubResource( 2 )
anims/Attack_melee = SubResource( 3 )
anims/Dead = SubResource( 4 )
anims/Hit = SubResource( 41 )
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/Run = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 10 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 11 )

[node name="raycast_detech_floor" type="RayCast2D" parent="."]
position = Vector2( 10, 30 )
enabled = true
cast_to = Vector2( 0, 5.5 )

[node name="raycast_detech_wall" type="RayCast2D" parent="."]
position = Vector2( 7, 25.75 )
enabled = true
cast_to = Vector2( 13, 0 )

[node name="raycast_detech_player_towards" type="RayCast2D" parent="."]
position = Vector2( 7.25, 25.75 )
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 4

[node name="raycast_detech_player_behind" type="RayCast2D" parent="."]
position = Vector2( -15, 29 )
enabled = true
cast_to = Vector2( -250, 0 )
collision_mask = 4

[node name="area2d_attack_melee" type="Area2D" parent="." groups=["Attack"]]
collision_layer = 32
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2d_attack_melee"]
position = Vector2( 20, -4.75 )
shape = SubResource( 40 )
disabled = true

[node name="area2d_attack_ground" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="area2d_attack_ground"]
position = Vector2( 2, 23.5 )
shape = SubResource( 49 )
disabled = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="area2d_attack_melee" to="." method="_on_area2d_attack_melee_body_entered"]
[connection signal="body_entered" from="area2d_attack_ground" to="." method="_on_area2d_attack_ground_body_entered"]
